# defer

./: CMakeLists.txt  README.md
include/: defer.hpp
test/: CMakeLists.txt  defer.cpp
